# ninemens-morris-ai-cpp

./: .gitignore  CMakeLists.txt  README.md  Report.docx
.github/workflows/: ci.yml
Game/input/: board1.txt  board3.txt
Game/output/: board2.txt  board4.txt
Game/src/: ABGame.cpp  ABOpening.cpp  MiniMaxGame.cpp  MiniMaxGameBlack.cpp  MiniMaxGameImproved.cpp  MiniMaxOpening.cpp  MiniMaxOpeningBlack.cpp  MiniMaxOpeningImproved.cpp  classboard.cpp  classboard.h  unittesting.cpp
docs/: README-DEV-NOTES.md
